nextCloud/nextcloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud 
        image: nextcloud
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-storage
          readOnly: false
      volumes:
      - name: nextcloud-storage
        persistentVolumeClaim:
          claimName: nextcloud-pvc

---
# Nextcloud Service
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: NodePort
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
